SGFD-15390: hero banner, vendor logo and add icon restyled - header center alignment fix

--- a/src/Volo/FrontendBundle/Resources/public/css/partial/header.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/partial/header.scss
@@ -52,10 +52,20 @@
 }
 
 .header__logo {
-  margin: 15px auto 0;
-  display: inline-block;
+  width: 56px;
+  height: 35px;
+  margin:  10px auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   @include respond-from("screen-sm") {
+    width: 80px;
+    height: 50px;
+    position: static;
     padding-left: 10px;
+    display: inline-block;
   }
 }
 
@@ -72,7 +82,6 @@
 .header__cart {
   @include make-link($link-color-bg-dark, $link-color-bg-dark);
   font-size: 1.8em;
-  right: 15px;
   display: inline-block;
   float: right;
   margin: 13px 20px 0;
@@ -118,7 +127,7 @@
 
   .header__wrapper__bg {
     top: 0;
-    border: 1px solid $base-border-color;
+    border-bottom: 1px solid $base-border-color;
   }
 
   .header__logo {
